--- a/totosa/css/estilo.css
+++ b/totosa/css/estilo.css
@@ -3,17 +3,20 @@
 	margin: 0;
 	padding: 0;
 }
+
+
+
 table, th, td {
   border: 1px solid black;
 }
-.center {
+.centerTable {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 35px;
 }
 
 .sabores-titulo{
-  color: #ffffff; 
+  color: #e2531a; 
   font-family: 'Raleway',sans-serif; 
   font-size: 62px; 
   font-weight: 800; 
@@ -24,7 +27,7 @@ table, th, td {
 
 }
 h1{
-  color: #080000; 
+  color: #e4b312; 
   font-family: 'Raleway',sans-serif; 
   font-size: 60px; 
   font-weight: 800; 
@@ -34,12 +37,15 @@ h1{
   text-transform: uppercase;
 
 }
+
 div.conteudo{
 
   padding: 20px;
 }
+
 body {
 	font-size: 1em;
+  	width: 100%;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	background-image: url('../imagens/pizzabg.jpg'), linear-gradient(#383333, #383333 ); 
 	-webkit-background-size: cover;
@@ -50,29 +56,51 @@ body {
 	
 	
 }
-
-.chat{
+.bar {
 	position: fixed;
-	bottom: 0px;
-	right: 0px; 
-	padding: 20px;
+	bottom: 5px;
+	right: 60px;
+	z-index: 120;
+	border-radius: 15px 15px 10px 10px;
+	overflow: hidden;
+  }
+
+.bar .txt {
+    display: flex;
+    background-color: #da8a12;
+    color: #ffffff;
+    padding: 10px 5px;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 17px;
+    font-weight: bold;
+    padding-right: 11px;
+    padding-left: 45px;
+    margin-left: -35px;
 
 }
-.chat-button {
-	background-color : #f10a0a;
-	color: rgb(0, 0, 0);
-	padding: 10px 20px;
-	border-radius: 4px;
-  }
 
 #cabecalho {
 	background-color: #f74e00;
-	padding: 15px;
+	padding: 10px;
+  	width: 100%;
 	text-align: center;
 }
 
-#logo, #menu {
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  width: 90%;
+}
+
+#logo-text, #menu {
 	padding: 10px;
+}
+
+#area-principal {
+margin-bottom: 100px;
+
 }
 
 #principal {
@@ -80,16 +108,16 @@ body {
 	margin: 0 auto;
 	padding: 25px;
 	margin-top: 10px;
+	align-items: center;
 	background-color: #fc8148;
 	opacity: 100%;
 }
 
-#area-lateral {
+#area-principal #area-lateral {
 	width: 340px;
-	float: right;
-    margin-left:auto;
-    margin-right:auto;
-
+  margin-right: 50px;
+  float:right
+ 
 }
 .conteudo-lateral {
 	background: #ec3b2e;
@@ -97,20 +125,34 @@ body {
 	margin-bottom: 20px;
 }
 
-.postagem-lateral {
-	font-size: 0.8em;
-	padding: 5px;
-	font-style: normal;
+h2#slogan{
+  color: #eb0800; 
+  font-family: 'Raleway',sans-serif; 
+  font-size: 30px; 
+  font-weight: 800; 
+  line-height: 72px; 
+  margin: 0 0 44px;
+  text-align: center; 
+  text-transform: uppercase;
+ 
+
+}
+
+
+#rodape-text{
+  text-align: center;
+  
 }
 
 #rodape {
-	position: fixed;
-	left: 0;
-	bottom: 0;
+	clear: both;
 	width: 100%;
+	max-height: fit-content;
+	text-align: center;
+	padding: 15px;
 	background-color:#f74e00;
 	color: rgb(26, 25, 25);
-	text-align: center;
+	
 }
 
 
@@ -137,105 +179,59 @@ a:hover {
 	text-decoration: none;
 }
 
-
-
-
-/*
-CARROSSEL DO SITE W3
-*/
-
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+#contato-form{
+	padding-left: 90px ;
+	padding-right: 90px;
+	padding-bottom: 20px;
+	padding-top: 50px;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+#form-contato{
+	position: relative;
+	z-index: 1;
+	background: #e2dfdffb;
+	max-width: 460px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	text-align: center;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
+#form-contato input, textarea {
+	outline: 0;
+	background: #ffffff;
+	width: 100%;
+	border: 4;
+	border-style: dashed;
+	margin: 0 0 15px;
+	padding: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
+  
+  }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.button-register {
+	font-family: "Roboto", sans-serif;
+	margin-top: 10px;
+	background:#ff5e00;
+	width: 50%;
+	border: 2;
+	border-color: #eb0800;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+  }
+#text-contato{
+	text-align: center;
+	align-content: center;
+	margin-bottom: 30px;;
 }
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+#map {
+	align-self: center;
+	margin-top: 30px;
+	
 }
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
