--- a/totosa/css/estilo.css
+++ b/totosa/css/estilo.css
@@ -2,12 +2,30 @@
 * {
 	margin: 0;
 	padding: 0;
+	
 }
 
 
 
-table, th, td {
-  border: 1px solid black;
+table th {
+	background-color: #065f0a;
+	padding: 2px;
+	text-align: center;
+	color:  white; 
+}
+table th td {
+
+	padding: 20px;
+	text-align: left;
+	
+}
+
+table{
+
+	border-collapse: separate;
+	border-spacing: 10px 0;
+  
+
 }
 .centerTable {
   margin-left: auto;
@@ -16,7 +34,7 @@ table, th, td {
 }
 
 .sabores-titulo{
-  color: #e2531a; 
+  color: #f75110; 
   font-family: 'Raleway',sans-serif; 
   font-size: 62px; 
   font-weight: 800; 
@@ -46,6 +64,7 @@ div.conteudo{
 body {
 	font-size: 1em;
   	width: 100%;
+	overflow-x: hidden;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	background-image: url('../imagens/pizzabg.jpg'), linear-gradient(#383333, #383333 ); 
 	-webkit-background-size: cover;
@@ -91,7 +110,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
-  width: 90%;
+  width: 80%;
 }
 
 #logo-text, #menu {
@@ -99,30 +118,56 @@ body {
 }
 
 #area-principal {
-margin-bottom: 100px;
+
+position: relative;
+margin-bottom: 10px;
+min-height: 80vh;
 
 }
 
 #principal {
-	width: 920px;
+	width: 50%;
 	margin: 0 auto;
 	padding: 25px;
 	margin-top: 10px;
 	align-items: center;
 	background-color: #fc8148;
 	opacity: 100%;
+	
 }
-
-#area-principal #area-lateral {
-	width: 340px;
-  margin-right: 50px;
-  float:right
+#principal-pedido {
+	width: 50%;
+	margin: 0 auto;
+	padding: 25px;
+	margin-top: 10px;
+	align-items: center;
+	background-color: #ccc;
+	opacity: 100%;
+	
+}
+#promo-close{
+	color: red;
+	float: right;
+	font-size: 20px;
+	
+}
+#promo-close:hover{
+	cursor: pointer;
+}
+ #area-lateral {
+	position: relative;
+	width: 20%;
+	margin-right: 30px;
+	float:right;
+	clear: both;
  
 }
+
 .conteudo-lateral {
-	background: #ec3b2e;
+	background: #30b14c;
 	padding: 10px;
 	margin-bottom: 20px;
+	position: relative;
 }
 
 h2#slogan{
@@ -145,7 +190,7 @@ h2#slogan{
 }
 
 #rodape {
-	clear: both;
+	overflow-x: hidden;
 	width: 100%;
 	max-height: fit-content;
 	text-align: center;
@@ -234,4 +279,308 @@ a:hover {
 	align-self: center;
 	margin-top: 30px;
 	
+}
+/* ------------------------------- LOGIN -------------------*/
+.button-login {
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	outline: 0;
+	background:#f7b600;
+	width: 50%;
+	border: 0;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+  }
+  .button-register {
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	outline: 0;
+	margin-top: 10px;
+	background:#ff5e00;
+	width: 50%;
+	border: 0 ;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+  }
+
+#login-div{
+	padding-left: 90px ;
+	padding-right: 90px;
+	padding-bottom: 20px;
+	padding-top: 50px;
+}
+
+.login-form{
+	position: relative;
+	z-index: 1;
+	background: #FFFFFF;
+	max-width: 360px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	text-align: center;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+
+}
+.form-input {
+	outline: 0;
+	background: #ffffff;
+	border-bottom: 20px solid rgb(231, 210, 15);
+	width: 100%;
+	border: 0;
+	margin: 0 0 15px;
+	padding: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
+  
+  }
+/* ------------------------------- CADASTRO -------------------*/
+
+#checkboxes{
+	align-items: flex-start;
+}
+
+
+
+  .button-register {
+	font-family: "Roboto", sans-serif;
+	text-transform: uppercase;
+	outline: 0;
+	margin-top: 10px;
+	background:#ff5e00;
+	width: 50%;
+	border: 0 ;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+  }
+
+#cadastro-div{
+	padding-left: 90px ;
+	padding-right: 90px;
+	padding-bottom: 20px;
+	padding-top: 50px;
+}
+
+.cadastro-form{
+	position: relative;
+	z-index: 1;
+	background: #FFFFFF;
+	max-width: 360px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	text-align: center;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+
+}
+.form-input {
+	outline: 0;
+	background: #e5e2e2;
+	border-bottom: 20px solid rgb(231, 210, 15);
+	width: 100%;
+	border: 0;
+	margin: 0 0 15px;
+	padding: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
+  
+  }
+
+  /* ---------------------- PEDIDOS -------------*/
+
+  .sabor{
+	width: 400px;
+	min-height: 100px;
+	padding: 5px;
+	background-color: #eeeeee;
+	border: 1px solid #cccccc;
+	margin: 5px;
+	transition: 0.5s;
+}
+
+.sabor:hover{
+	box-shadow: 3px 3px 10px #e9b572;
+	transition: 0.5s;
+}
+
+.sabor img{
+	width: 80px;
+	border-radius: 40px;
+	margin: 0 20px 0 20px;
+}
+
+.sabor label{
+	display: flex;
+	align-items: center;
+}
+
+.sabor_descricao{
+	display: flex;
+	flex-direction: column;
+}
+
+.selecionado{
+	background-color: #aad3c6;
+	transition: 1s;
+} 
+
+#lista_sabores{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+} 
+
+
+@media only screen and (max-width: 700px){
+
+	#area-lateral {
+
+		position: absolute;
+		width: 20%;
+		margin-right: 30px;
+		float: inline-end;
+		clear: both;
+		 
+		}
+
+		#principal {
+			width: 80%;
+			margin: 0 auto;
+			margin-top: 10px;
+			align-items: center;
+			background-color: #fc8148;
+			opacity: 100%;
+			
+		}
+		#principal-pedido {
+			width: 80%;
+			margin: 0 auto;
+			margin-top: 10px;
+			align-items: center;
+			background-color: #ccc;
+			opacity: 100%;
+			
+		}
+
+		#area-principal {
+			clear: both;
+			position: relative;
+			margin-bottom: 50px;
+			min-height: 70vh;
+			width: 100%;
+			
+		}
+
+		.center {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 20px;
+			width: 90%;
+		  }
+
+		  #cabecalho {
+			background-color:  #f74e00;
+			width: 100%;
+			text-align: center;
+		}
+
+		#contato-form{
+			padding-left: 3px ;
+			padding-right: 3px;
+			padding-bottom: 3px;
+			padding-top: 3px;
+		}
+		
+		#form-contato{
+			position: relative;
+			z-index: 1;
+			background: #e2dfdffb;
+			max-width: 460px;
+			margin: 0 auto 100px;
+			padding: 45px;
+			text-align: center;
+			box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+		}
+
+		#login-div{
+			padding-left: 3px ;
+			padding-right: 3px;
+			padding-bottom: 3px;
+			padding-top: 3px;
+			margin-top: 10px;
+			
+		}
+		
+		.login-form{
+			position: relative;
+			z-index: 1;
+			background: #FFFFFF;
+			width: 60%;
+			margin: 0 auto 100px;
+			
+			text-align: center;
+			box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+		
+		}
+
+		#cadastro-div{
+			padding-left:3px ;
+			padding-right: 3px;
+			padding-bottom: 3px;
+			padding-top: 3px;
+			width: 100%;
+		}
+		
+		.cadastro-form{
+			position: relative;
+			z-index: 1;
+			background: #FFFFFF;
+			width: 70%;
+			margin: 0 auto 100px;
+			padding: 45px;
+			text-align: center;
+			box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+		
+		}
+		h1{
+			color: #e4b312; 
+			font-family: 'Raleway',sans-serif; 
+			font-size: 30px; 
+			font-weight: 800; 
+			line-height: 72px; 
+			margin: 0 0 24px; 
+			text-align: center; 
+			text-transform: uppercase;
+		  
+		  }
+		  .sabores-titulo{
+			color: #f75110; 
+			font-family: 'Raleway',sans-serif; 
+			font-size: 25px; 
+			font-weight: 800; 
+			line-height: 72px; 
+			margin: 0 0 24px; 
+			text-align: center; 
+			text-transform: uppercase;
+		  
+		  }
+		  * {
+			margin: 0;
+			padding: 0;
+			overflow-x: hidden;
+			
+		}
+		
 }
