--- a/css/estilo.css
+++ b/css/estilo.css
@@ -339,6 +339,12 @@ a:hover {
   
   }
 /* ------------------------------- CADASTRO -------------------*/
+
+.como-conheceu{
+	padding: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 .select_bairro {
 	position: relative;
 	font-family: Arial;
